@@ -1,3 +1,8 @@
+2020-07-07         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DIST): New test, mpfrcase2.
+	* mpfrcase2.awk, mpfrcase2.in, mpfrcase2.ok: New files.
+
 2020-07-06         Andrew J. Schorr      <aschorr@telemetry-investments.com>
 
 	* Makefile.am (AWK): Append $(GAWK_TEST_ARGS) to enable running
